[package]
name = "rumble-desktop-shell"
version = "0.1.0"
edition = "2024"

[lib]
name = "rumble_desktop_shell"
path = "src/lib.rs"

[features]
default = ["encrypted-keys", "ssh-agent", "global-hotkeys", "wayland-portal"]
# Enables Argon2 + ChaCha20Poly1305 encrypted-at-rest identity files.
encrypted-keys = ["dep:argon2", "dep:chacha20poly1305", "dep:getrandom"]
# Enables ssh-agent-backed identity (Unix only at use sites).
ssh-agent = ["dep:ssh-agent-lib", "dep:ssh-key", "dep:service-binding"]
# Enables the cross-platform global hotkey backend.
global-hotkeys = ["dep:global-hotkey"]
# Enables the Linux XDG GlobalShortcuts portal backend.
wayland-portal = ["dep:ashpd", "dep:futures-util"]

[dependencies]
eframe = "0.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0"
tracing = "0.1"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
anyhow = "1.0"
async-trait = "0.1"
ed25519-dalek = { workspace = true }
rand = { workspace = true }
rumble-client = { path = "../rumble-client" }
rumble-client-traits = { path = "../rumble-client-traits" }
# Tokio is on the hotkey API surface (init_portal_backend takes a Handle)
# even on non-Linux platforms, so it's unconditional.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }

# Cross-platform global hotkeys (X11, Windows, macOS).
global-hotkey = { version = "0.7", optional = true }

# Encrypted-at-rest identity files.
argon2 = { version = "0.5", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
getrandom = { version = "0.3", optional = true }

# SSH agent identity backend.
ssh-agent-lib = { version = "0.5", optional = true }
ssh-key = { version = "0.6", features = ["ed25519"], optional = true }
service-binding = { version = "3.0", optional = true }

# XDG Desktop Portal GlobalShortcuts backend, Wayland only.
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.12", default-features = false, features = ["tokio"], optional = true }
futures-util = { version = "0.3", optional = true }
