[package]
name = "rumble-desktop-shell"
version = "0.4.1"
edition = "2024"
license = "MIT"

[lib]
name = "rumble_desktop_shell"
path = "src/lib.rs"

[features]
# Cross-platform defaults only. `wayland-portal` is Linux-only —
# consumers opt in via a `[target.'cfg(target_os = "linux")'.dependencies]`
# block so non-Linux builds don't depend on cargo silently dropping
# feature references to missing target-gated optional deps.
#
# `ssh-agent` stays on by default because its underlying crates
# (ssh-agent-lib, ssh-key, service-binding) compile on every platform
# and the API surface — `SshAgentClient`, `connect_and_list_keys`,
# `select_agent_key` — is referenced unconditionally by `rumble-damascene`.
# Cfg-gating those call sites would be a much larger change.
default = ["encrypted-keys", "ssh-agent", "global-hotkeys"]
# Enables Argon2 + ChaCha20Poly1305 encrypted-at-rest identity files.
encrypted-keys = ["dep:argon2", "dep:chacha20poly1305", "dep:getrandom"]
# Enables ssh-agent-backed identity.
ssh-agent = ["dep:ssh-agent-lib", "dep:ssh-key", "dep:service-binding"]
# Enables the cross-platform global hotkey backend.
global-hotkeys = ["dep:global-hotkey"]
# Enables the Linux XDG GlobalShortcuts portal backend.
wayland-portal = ["dep:ashpd", "dep:futures-util"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
rumble-client = { path = "../rumble-client" }
rumble-client-traits = { path = "../rumble-client-traits" }
# Tokio is on the hotkey API surface (init_portal_backend takes a Handle)
# even on non-Linux platforms, so it's unconditional.
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync", "macros"] }

# Cross-platform global hotkeys (X11, Windows, macOS).
global-hotkey = { version = "0.8", optional = true }

# Encrypted-at-rest identity files.
argon2 = { version = "0.5", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
getrandom = { version = "0.4", optional = true }
# Unconditional: key-material zeroization is also used on the plaintext
# identity paths (hex private keys), not just `encrypted-keys`.
zeroize = "1"

# SSH agent identity backend.
ssh-agent-lib = { version = "0.6", optional = true }
ssh-key = { version = "0.6", features = ["ed25519"], optional = true }
service-binding = { version = "3.0", optional = true }

# XDG Desktop Portal GlobalShortcuts backend, Wayland only.
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.13", default-features = false, features = ["tokio", "global_shortcuts"], optional = true }
futures-util = { version = "0.3", optional = true }
