[package]
name = "rumble-desktop"
description = "Native desktop Platform implementation for rumble-client-traits"
version = "0.1.0"
edition = "2024"

[features]
default = ["pulse"]
pulse = ["dep:libpulse-binding", "dep:libpulse-simple-binding"]

[dependencies]
rumble-client-traits = { path = "../rumble-client-traits" }
rumble-protocol = { path = "../rumble-protocol" }

# Transport
quinn = { version = "0.11", default-features = false, features = ["rustls-aws-lc-rs", "bloom", "log", "platform-verifier", "runtime-tokio"] }
rustls = { version = "0.23", default-features = true }
rustls-pemfile = "2"
webpki-roots = "1.0.4"
url = "2.5.7"
sha2 = "0.10"
bytes = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "io-util", "net", "fs", "sync"] }
prost = "0.14"

# Audio
cpal = "0.17.0"

# Codec
opus = { git = "https://github.com/u6bkep/opus-rs.git", rev = "2c545dc" }

# Storage
directories = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Key Management
ed25519-dalek = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
hex = "0.4"
argon2 = "0.5"
chacha20poly1305 = "0.10"
ssh-agent-lib = "0.5"
ssh-key = { version = "0.6", features = ["ed25519"] }
service-binding = "3.0"

# File transfer relay
uuid = { version = "1.19.0", features = ["v4"] }
mime_guess = "2"
parking_lot = "0.12"
tokio-util = "0.7"


# Shared
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"

# Linux: PulseAudio backend (also speaks to PipeWire-pulse on PipeWire systems).
# Optional behind the `pulse` feature, on by default for Linux builds.
# Kept at the bottom of the manifest on purpose: a `[target.'cfg(...)'.dependencies]`
# block silently captures every dep below it until the next top-level table, so
# keeping it last avoids accidentally Linux-gating unrelated deps.
[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = { version = "2.30", optional = true }
libpulse-simple-binding = { version = "2.29", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
