[package]
name = "rumble-desktop"
description = "Native desktop Platform implementation for rumble-client-traits"
version = "0.1.0"
edition = "2024"

[features]
# Cross-platform defaults only. `pulse` is Linux-only — consumers
# opt in via a `[target.'cfg(target_os = "linux")'.dependencies]`
# block so non-Linux builds don't depend on cargo silently dropping
# feature references to missing target-gated optional deps.
default = ["audio", "codec"]
# Cpal-based audio capture/playback (alsa on Linux, CoreAudio on macOS, WASAPI
# on Windows). Drop for server-side daemons that never open audio devices
# (e.g. mumble-bridge).
audio = ["dep:cpal"]
# Linux PulseAudio backend. Implies `audio` since `DesktopAudioBackend` only
# adds the Pulse variant when this is on.
pulse = ["audio", "dep:libpulse-binding", "dep:libpulse-simple-binding"]
# Opus voice codec. Drop for daemons that just relay opaque opus payloads.
codec = ["dep:opus"]

[dependencies]
rumble-client-traits = { path = "../rumble-client-traits" }
rumble-protocol = { path = "../rumble-protocol" }

# Transport
quinn = { workspace = true, features = ["rustls-aws-lc-rs", "bloom", "log", "platform-verifier", "runtime-tokio"] }
rustls = { workspace = true, default-features = true }
rustls-pemfile = { workspace = true }
webpki-roots = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "io-util", "net", "fs", "sync"] }
prost = { workspace = true }

# Audio (gated by `audio` feature)
cpal = { version = "0.17.0", optional = true }

# Codec (gated by `codec` feature)
opus = { git = "https://github.com/u6bkep/opus-rs.git", rev = "2c545dc", optional = true }

# File transfer relay
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
mime_guess = "2"
parking_lot = "0.12"
tokio-util = { workspace = true }


# Shared
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

# Linux: PulseAudio backend (also speaks to PipeWire-pulse on PipeWire systems).
# Optional behind the `pulse` feature, on by default for Linux builds.
# Kept at the bottom of the manifest on purpose: a `[target.'cfg(...)'.dependencies]`
# block silently captures every dep below it until the next top-level table, so
# keeping it last avoids accidentally Linux-gating unrelated deps.
[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = { version = "2.30", optional = true }
libpulse-simple-binding = { version = "2.29", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
