[package]
name = "rumble-egui"
version = "0.1.0"
edition = "2024"

[lib]
name = "rumble_egui"
path = "src/lib.rs"

[[bin]]
name = "rumble-egui"
path = "src/main.rs"

[features]
default = []
test-harness = ["dep:egui_kittest"]

[dependencies]
eframe = "0.33.3"
# egui = "0.33.2"
egui_extras = { version = "0.33.3", features = ["image"] }
egui_ltreeview = { git = "https://github.com/u6bkep/egui_ltreeview.git", branch = "main" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
rumble-client = { path = "../rumble-client" }
rumble-client-traits = { path = "../rumble-client-traits" }
rumble-desktop = { path = "../rumble-desktop" }
rumble-desktop-shell = { path = "../rumble-desktop-shell", features = ["egui-keys"] }
rumble-protocol = { path = "../rumble-protocol" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0"
ed25519-dalek = { workspace = true }
rand = { workspace = true }
hex = "0.4"
# Crypto + SSH agent crates moved to rumble-desktop-shell::identity
# (the encrypted-keys + ssh-agent features). egui consumes them via
# the shared KeyManager.
anyhow = "1.0"
rfd = "0.16"
base64 = "0.22"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["avif", "bmp", "dds", "ff", "gif", "hdr", "ico", "jpeg", "png", "pnm", "qoi", "tga", "tiff", "webp"] }
tempfile = "3"

# global-hotkey + ashpd live in rumble-desktop-shell's hotkeys module —
# the egui client just consumes the shared API.

# Optional test harness dependencies
egui_kittest = { version = "0.33", features = ["wgpu", "snapshot"], optional = true }

# Linux-only opt-ins (PulseAudio output + XDG portal hotkeys). The
# deprecated egui client is Linux-only in practice; gating these to
# Linux keeps the manifest honest if anyone ever tries to cross-build.
[target.'cfg(target_os = "linux")'.dependencies]
rumble-desktop = { path = "../rumble-desktop", features = ["pulse"] }
rumble-desktop-shell = { path = "../rumble-desktop-shell", features = ["wayland-portal"] }
