[package]
name = "rumble-protocol"
version = "0.1.0"
edition = "2024"

[lib]
name = "rumble_protocol"
path = "src/lib.rs"

[dependencies]
bitflags = { workspace = true }
prost = { workspace = true }
prost-types = "0.14"
bytes = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rumble-audio = { path = "../rumble-audio" }
hex = { workspace = true }
urlencoding = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
