[package]
name = "rumble-protocol"
version = "0.3.0"
edition = "2024"
license = "MIT"

[lib]
name = "rumble_protocol"
path = "src/lib.rs"

[dependencies]
bitflags = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rumble-audio = { path = "../rumble-audio" }

[build-dependencies]
prost-build = { workspace = true }
