[package]
name = "rumble-video"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
tracing = { workspace = true }
thiserror = { workspace = true }

# GPU mirror: shape `VideoStream` frames into a damascene `AppTexture`
# the same way `rumble-damascene::AnimatedGpu` does for animated images.
# Damascene pin lives in the workspace [workspace.dependencies] block.
damascene-core = { workspace = true }
damascene-wgpu = { workspace = true }
wgpu = { workspace = true }

# build.rs picks pkg-config (Linux/macOS targets) or fetch-and-extract
# (Windows targets) based on CARGO_CFG_TARGET_OS. Build-dependency cfg
# expressions evaluate against the **host**, not the target, so we
# can't gate these per-target without breaking cross-compile from
# Linux→Windows. They're cheap to compile (~seconds) and the network
# fetch only runs when the target actually demands it.
[build-dependencies]
pkg-config = "0.3"
ureq = { version = "3", default-features = false, features = ["rustls"] }
sevenz-rust2 = "0.21"
sha2 = { workspace = true }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
tracing-subscriber = { workspace = true }
damascene-winit-wgpu = { workspace = true }
