[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "net", "time", "io-util"] }
quinn = { workspace = true, features = ["rustls-aws-lc-rs", "bloom", "log", "runtime-tokio"] }
rustls = { workspace = true, default-features = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true, features = ["aws_lc_rs", "pem", "crypto"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
bytes = { workspace = true }
rumble-protocol = { path = "../rumble-protocol" }
webpki-roots = { workspace = true }
prost = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true }
sled = "0.34"
ed25519-dalek = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
bincode = "1.3"
clap = { workspace = true }
toml = "1"
bcrypt = "0.19"
async-trait = { workspace = true }
tokio-util = { workspace = true }
bytesize = { version = "2", features = ["serde"] }
humantime-serde = "1"
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
rumble-client = { path = "../rumble-client" }
rumble-client-traits = { path = "../rumble-client-traits" }
rumble-desktop = { path = "../rumble-desktop" }
tempfile = "3"
rustls-pemfile = { workspace = true }
