[package]
name = "server"
version = "0.3.0"
edition = "2024"
license = "MIT"

# Disable the default libtest bench harness on the lib and binary so
# `cargo bench -p server` dispatches only to the criterion bench below
# (the libtest harness rejects criterion's CLI flags like --save-baseline).
[lib]
bench = false

[[bin]]
name = "server"
bench = false

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "net", "time", "io-util"] }
quinn = { workspace = true, features = ["rustls-aws-lc-rs", "bloom", "log", "runtime-tokio"] }
rustls = { workspace = true, default-features = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true, features = ["aws_lc_rs", "pem", "crypto"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
bytes = { workspace = true }
rumble-protocol = { path = "../rumble-protocol" }
rumble-web-types = { path = "../rumble-web-types" }
webpki-roots = { workspace = true }
prost = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true }
sled = "0.34"
ed25519-dalek = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
bincode = "1.3"
clap = { workspace = true }
toml = "1"
bcrypt = "0.19"
async-trait = { workspace = true }
tokio-util = { workspace = true }
bytesize = { version = "2", features = ["serde"] }
humantime-serde = "1"
url = { workspace = true }
serde_json = { workspace = true }
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
rust-embed = { version = "8", features = ["mime-guess"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
rumble-client = { path = "../rumble-client" }
rumble-client-traits = { path = "../rumble-client-traits" }
rumble-desktop = { path = "../rumble-desktop" }
tempfile = "3"
rustls-pemfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "server_hotpaths"
harness = false
